🌄 Sun/Moon-set/rise homepage

--- a/src/app/current-weather-data/current-weather-data.component.css
+++ b/src/app/current-weather-data/current-weather-data.component.css
@@ -72,3 +72,13 @@
 .current-icon{
   width:10%;
 }
+
+.astroicon.asm{
+  max-height: 25px;
+}
+.astroicon {
+  max-height: 40px;
+}
+.astrocol{
+  text-align: center;
+}
