--- a/src/app/daily-forecast/daily-forecast.component.html
+++ b/src/app/daily-forecast/daily-forecast.component.html
@@ -5,14 +5,18 @@
     type="text"
     id="city-name"
     placeholder="Upišite naziv grada"
+    [(ngModel)]="name"
     required
   />
-  <!-- TODO izmijeniti input tako da upisom teksta automatski izmijenjujemo name: string polje u .ts fileu -->
   <br />
-  <button type="button" class="btn btn-secondary" style="margin-top: 0.5%">
+  <button
+    type="button"
+    class="btn btn-secondary"
+    style="margin-top: 0.5%"
+    (click)="setValue()"
+  >
     Pretraga
   </button>
-  <!-- TODO klikom na gumb trebala bi se pozivati metoda setValue() -->
 </div>
 
 <div class="weather-data" style="margin: 1%">
@@ -21,7 +25,7 @@
     style="width: fit-content; padding: 0%; margin: 1%; padding: 2%"
   >
     <div class="current-data" style="text-align: right; margin: 1%">
-      <!-- TODO ispisati naziv grada, današnji datum i trenutno vrijeme preuzeto sa response-a -->
+      {{ location.name }} {{ location.date }} {{ location.localTime }}
     </div>
     <canvas id="tempChart" width="800" height="200"></canvas>
   </div>
@@ -38,6 +42,7 @@
     >
       <!-- TODO Kreirati kartice prema zadanom templateu sa podacima prognoze za tri dana. Klikom na karticu poziva se renderLineChart() metoda sa podacima za taj dan  -->
       <div class="card-body">
+        aaaa
         <!-- TODO Ispisati datum u dd.MM. formatu -->
         <h5 class="card-title" style="text-align: center"></h5>
         <!-- TODO Ubaciti ikonu prognoze vremena -->
