--- a/src/app/current-weather-data/current-weather-data.component.css
+++ b/src/app/current-weather-data/current-weather-data.component.css
@@ -2,6 +2,9 @@
 .weather-data-container{
   display: flex;
   justify-content: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .grid-container {
