--- a/src/app/daily-forecast/daily-forecast.component.html
+++ b/src/app/daily-forecast/daily-forecast.component.html
@@ -12,7 +12,6 @@
   <button
     type="button"
     class="btn btn-secondary"
-    style="margin-top: 0.5%"
     (click)="setValue()"
   >
     Pretraga
@@ -22,7 +21,7 @@
 <div class="weather-data" style="margin: 1%">
   <div
     class="card"
-    style="width: fit-content; padding: 0%; margin: 1%; padding: 2%"
+    style="padding: 0%; margin: 1%; padding: 2%"
   >
     <div class="current-data" style="text-align: right; margin: 1%">
       {{ location.name }} {{ location.date }} {{ location.localTime }}
